traefik-gateway-vault.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: vault
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: web
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    name: websecure
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: local-selfsigned-tls
      mode: Terminate
